feat: null 또는 빈 문자열 검증 시 trim + isEmpty 사용 대신 isBlank 메서드 사용으로 변경